Improve input validation for Date and Side Effects

--- a/Project2/covid19Survey-App/app/src/main/AndroidManifest.xml
+++ b/Project2/covid19Survey-App/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity android:name=".VaccineTypeActivity"
             android:parentActivityName=".GenderActivity"/>
         <activity android:name=".GenderActivity"
-            android:parentActivityName=".CityActivity"/>
+            android:parentActivityName=".BirthDateActivity"/>
         <activity
             android:name=".BirthDateActivity"
             android:parentActivityName=".CityActivity" />
